--- a/_posts/Study/Java/baekjoon/4344.md
+++ b/_posts/Study/Java/baekjoon/4344.md
@@ -30,17 +30,17 @@
 55.556%
 ```
 
-**출처**
-Contest > Waterloo's local Programming Contests > 28 September, 2002 D번
+**출처**<br>
+Contest > Waterloo's local Programming Contests > 28 September, 2002 D번<br><br>
 
-문제를 번역한 사람: busyhuman
-문제의 오타를 찾은 사람: choiking10 eric00513
-어색한 표현을 찾은 사람: djm03178
+문제를 번역한 사람: busyhuman<br>
+문제의 오타를 찾은 사람: choiking10 eric00513<br>
+어색한 표현을 찾은 사람: djm03178<br>
 
-**링크**
-PKU Judge Online
-ZJU Online Judge
-TJU Online Judge
+**링크**<br>
+PKU Judge Online<br>
+ZJU Online Judge<br>
+TJU Online Judge<br>
 
 **java code**
 
