--- a/_posts/Study/Java/baekjoon/11053.md
+++ b/_posts/Study/Java/baekjoon/11053.md
@@ -27,7 +27,7 @@
 데이터를 추가한 사람: harinboy
 
 -------------------------------------------------------------
-java code
+**java code**
 
 ```java
 import java.util.Scanner;
